tests/accept/eleven.ul
void foo()
{
	boolean x;
	x = 2-(3*3+1) == 0-8;
	return;	
}
