tests/reject/noteleven.ul
int foo()
{
	int x;
	x = 1+1-(3*2 -1));
	return x;
}
